--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   "license": "MIT",
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.7.0",
     "electron": "^35.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
     "remark-gfm": "^4.0.1",
     "uuid": "^11.1.0"
   },
