--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.7.0",
     "electron": "^35.2.1",
+    "electron-devtools-installer": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
