--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/main/main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "concurrently \"npm run watch\" \"npm run electron-dev\"",
+    "dev": "electronmon .",
     "electron-dev": "wait-on dist/main.js && electron .",
     "test": "npx playwright test",
     "test:jest": "npx jest",
@@ -48,6 +48,7 @@
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.1.2",
     "css-loader": "^7.1.2",
+    "electronmon": "^2.0.3",
     "eslint": "^9.25.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
